--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="profile" content="width=device-width, initial-scale=1">
 <html>
 <head>
-    <title>Sumanth Resume</title>
+    <title>Sumanth Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
@@ -64,7 +64,7 @@
         <div class="profile container">
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <img src="images/male-avatar-profile-image.jpg" class="profile-image">
+                    <img src="images/photo.jpg" class="profile-image">
                 </div>
                 <div class="col-md-6">
                     <div class="name">
