--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="profile container">
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <img src="images/photo.jpg" class="profile-image">
+                    <img src="images/male-avatar-profile-image.jpg" class="profile-image">
                 </div>
                 <div class="col-md-6">
                     <div class="name">
