Updated wowlabz company in experience

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section id="header">
     <div class="heading">
         <h1><i><b>SUMANTHA.N.T.S</b></i></h1><hr class="hr1">
-        <h4>Data Science Enthusiast</h4>
+        <h4>Data Science Engineer</h4>
     </div>
     <div class="box">
         <div>
@@ -58,13 +58,13 @@
         </nav>
     </div>
 
-<!-------------------------------profile---------------------------!>
+
     <div class="profile" id="profile">
         <h2 class="sub-head"><i><u>My Profile:</u></i></h2>
         <div class="profile container">
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <img src="images/male-avatar-profile-image.jpg" class="profile-image">
+                    <img src="images/Photo1.jpg" class="profile-image">
                 </div>
                 <div class="col-md-6">
                     <div class="name">
@@ -73,14 +73,14 @@
                     </div>
                 </div>
             </div>
-            <p class="summary">"A highly-skilled focused engineer with data science certification.
-                Excellent in using advanced analytical techniques to analyze, mine and infer business insights.
-                I ensure to contribute with my knowledge, logical thinking and analytical skills towards the consistent growth
-                and development of the organization."</p>
+            <p class="summary">Data science engineer having <b>1.5+ years</b> of experience, passionate about <b>cutting-edge technologies</b> 
+                and skilled in developing scalable solutions to wide range of Data Science problems, specialized in <b>Machine Learning 
+                algorithm, Computer Vision and NLP</b>. I have good understanding of end-to-end life cycle of Data science projects. 
+                I'm <b>quick learner</b> with strong <b>problem solving and leadership skills.</b></p>
         </div>
     </div>
 
-<!---------------------------social media icons-----------------------!>
+
     <div class="social-icons">
 
         <ul>
@@ -99,14 +99,54 @@
         </ul>
     </div>
 
-<!-----------------------------------experience--------------------------!>
+
     <div class="exp" id="experience">
         <div class="container">
         <h2 class="sub-head"><i><u>My Experience:</u></i></h2>
+
         <div class="row">
             <div class="col-md-6 com_name">
-                <h4>Innodatatics</h4>
-                <h6>Jan 2021 - Present</h6>
+                <a href="https://www.wowlabz.com/"><h4>WowLabz</h4></a>
+                <h6>Jan 2022 - Present</h6>
+            </div>
+            <div class="col-md-6 desig">
+                <h5>Junior Data Science Engineer</h5>
+                <ul>
+                    <li>
+                        Worked on Panoptic Image segmentation where objects and sematics of the image are classified.
+                    </li>
+                    <li>
+                        Worked on object detection algorithm like YOLO v5 and Mask RCNN
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 com_name">
+                <a href="https://www.wowlabz.com/"><h4>WowLabz</h4></a>
+                <h6>Aug 2021 - Jan 2022</h6>
+            </div>
+            <div class="col-md-6 desig">
+                <h5>Data Science Intern</h5>
+                <ul>
+                    <li>
+                        Implemented Azure MLOps pipeline which include model building, unit tests, continuous Development
+                        and continuous deployment pipelines.
+                    </li>
+                    <li>
+                        Worked on Name Entity Recognition(NER) project from scratch using scipy module. Data annotation is 
+                        carried on doccano tool which is required for training custom
+                        NER model. 
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 com_name">
+                <a href="https://innodatatics.ai/"><h4>Innodatatics</h4></a>
+                <h6>Jan 2021 - July 2021</h6>
             </div>
             <div class="col-md-6 desig">
                 <h5>Data Scientist Intern</h5>
@@ -123,12 +163,12 @@
                     </li>
                 </ul>
             </div>
-
         </div>
+
         <div class="row">
             <div class="col-md-6 com_name">
-                <h4>Power Research & Development Consultants</h4>
-                <h6>Aug 2018 - Present</h6>
+                <a href="http://www.prdcinfotech.com/"><h4>Power Research & Development Consultants</h4></a>
+                <h6>Aug 2018 - July 2021</h6>
             </div>
             <div class="col-md-6 desig">
                 <h5>Power System Engineer</h5>
@@ -144,10 +184,7 @@
             </div>
             </div>
         </div>
-
     </div>
-
-    <!--------------------------------skills----------------------------!>
 
     <div class="skills" id="skills">
         <div class="container">
@@ -158,13 +195,13 @@
             <h4 class="sub-head1">Frame Works:</h4>
             <h5>Flask, Streamlit, Hadoop, Tensorflow, Keras, Sci-kit Learn</h5>
             <h4 class="sub-head1">Tools/IDE:</h4>
-            <h5>Spyder, Jupyter Notebook, Pycharm, MySql, Tableau</h5>
+            <h5>VS Code, MySql, Tableau</h5>
             <h4 class="sub-head1">Data Science Skills:</h4>
-            <h5>Machine Learning, CNN, RNN, LSTM, NLP, Time series Forecasting, Big data</h5>
+            <h5>Machine Learning, CNN, RNN, LSTM, NLP, Time series Forecasting, Big data, MLOps</h5>
         </div>
         </div>
     </div><br><br>
-<!----------------------------certifications------------------------!>
+
     <div class="certifications" id="certificates">
         <div class="container">
             <h3><u><i>My Certifications:</i></u></h3>
@@ -186,8 +223,6 @@
             </div>
         </div>
     </div>
-
-<!------------------------------projects----------------------------!>
 
     <div class="projects" id="projects">
         <div class="container">
@@ -288,7 +323,6 @@
         </div>
     </div>
 
-    <!-----------------------Education-------------------------!>
 <div class="education" id="education">
     <div class="container">
         <h3 style="text-align: center;"><u><i>My Education:</i></u></h3>
@@ -325,7 +359,7 @@
         </ul>
     </div>
 </div>
-<!----------------------------contact------------------------!>
+
 <div class="contact" id="contact">
     <div class="container text-center">
         <h3><u><i>CONTACT ME</i></u></h3>
@@ -345,7 +379,7 @@
         <button type="button" class="btn btn-primary"><i class="fa fa-rocket"></i><b>Hire Me</b></button>
     </div>
     <div class="footer">
-        <p>Copyrights <i class="far fa-copyright"></i> 2021 | <b>Sumantha.NTS</b></p>
+        <p>Copyrights <i class="far fa-copyright"></i> 2022 | <b>Sumantha.NTS</b></p>
     </div>
 </div>
 </section>
