updated entire website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section id="header">
     <div class="heading">
         <h1><i><b>SUMANTHA.N.T.S</b></i></h1><hr class="hr1">
-        <h4>Data Science Engineer</h4>
+        <h4>Data Scientist</h4>
     </div>
     <div class="box">
         <div>
@@ -67,38 +67,56 @@
                     <img src="images/Photo1.jpg" class="profile-image">
                 </div>
                 <div class="col-md-6">
-                    <div class="name">
-                        <h4>Name: SUMANTHA.NTS</h4>
-
+                    <div class="profile-detail">
+                        <img class="profile-icons" src="images/name icon.png">
+                        <div>SUMANTHA.NTS</div>
+                    </div>
+                    <div class="profile-detail">
+                        <img class="profile-icons" src="images/location icon.png">
+                        <div>Bengaluru, Karnataka</div>
+                    </div>
+                    <div class="profile-detail">
+                        <img class="profile-icons" src="images/linkedin icon.png">
+                        <div><a href="https://www.linkedin.com/in/sumantha-nts/">
+                            sumantha-nts
+                        </a></div>
+                    </div>
+                    <div class="profile-detail">
+                        <img class="profile-icons" src="images/github icon.png">
+                        <div><a href="https://github.com/sumantha-NTS">
+                            sumantha-NTS
+                        </a></div>
+                    </div>
+                    <div class="profile-detail">
+                        <img class="profile-icons" src="images/instagram icon.png">
+                        <div><a href="https://www.instagram.com/sumanth_neechadi/">
+                            sumanth_neechadi
+                        </a></div>
+                    </div>
+                    <div class="profile-detail">
+                        <img class="profile-icons" src="images/medium icon.png">
+                        <div><a href="https://medium.com/@sumanthneechadi">
+                            Sumantha.NTS
+                        </a></div>
                     </div>
                 </div>
             </div>
-            <p class="summary">Data science engineer having <b>1.5+ years</b> of experience, passionate about <b>cutting-edge technologies</b> 
-                and skilled in developing scalable solutions to wide range of Data Science problems, specialized in <b>Machine Learning 
-                algorithm, Computer Vision and NLP</b>. I have good understanding of end-to-end life cycle of Data science projects. 
-                I'm <b>quick learner</b> with strong <b>problem solving and leadership skills.</b></p>
+            <ul class="summary">
+                <li>
+                    An exuberant and accomplished data science engineer having <b>2+ years</b> of experience, passionate about cutting-edge technologies, and skilled in developing scalable solutions to a wide range of data science problems, specializing in <b>Machine Learning algorithms, Computer Vision and NLP.</b>
+                </li>
+                <li>
+                    Have a good understanding of the end-to-end life cycle of Data science projects. Worked extensively on <b>DVC</b> to track ML models and create pipelines. Have experience in training and optimization of object detection and NLP models on servers with GPU.
+                </li>
+                <li>
+                    Have extensive experience in annotation, preprocessing the text data and training names entity recognition(NER) models in servers.
+                </li>
+                <li>
+                    Theoretical and practical knowledge of <b>MLops</b> CI CD pipeline in Azure Cloud.
+                </li>
+            </ul>
         </div>
     </div>
-
-
-    <div class="social-icons">
-
-        <ul>
-            <a href="http://www.linkedin.com/in/sumantha-nts">
-                <li><i class="fab fa-linkedin"></i></li>
-            </a>
-            <a href="https://medium.com/@sumanthneechadi">
-                <li><i class="fab fa-medium"></i></li>
-            </a>
-            <a href="https://github.com/sumantha-NTS">
-                <li><i class="fab fa-github"></i></li>
-            </a>
-            <a href="https://www.facebook.com/sumanthNTSneechadi">
-                <li><i class="fab fa-facebook"></i></li>
-            </a>
-        </ul>
-    </div>
-
 
     <div class="exp" id="experience">
         <div class="container">
@@ -110,13 +128,16 @@
                 <h6>Jan 2022 - Present</h6>
             </div>
             <div class="col-md-6 desig">
-                <h5>Junior Data Science Engineer</h5>
+                <h5>Data Scientist</h5>
                 <ul>
                     <li>
-                        Worked on Panoptic Image segmentation where objects and sematics of the image are classified.
+                        Built stable and maintainable codebases using git to develop python package and FastAPI backend which implements named-entity recognition(NER) pipeline to extract relevant information from unstructured text into predefined entities.
                     </li>
                     <li>
-                        Worked on object detection algorithm like YOLO v5 and Mask RCNN
+                        Training and optimization of YOLOV5 object detection algorithm on a custom dataset.
+                    </li>
+                    <li>
+                        Integrated DVC to track the models and to create pipelines to run stages of model training.
                     </li>
                 </ul>
             </div>
@@ -188,17 +209,8 @@
 
     <div class="skills" id="skills">
         <div class="container">
-        <h3 class="sub-head2"><i><u>My Skills:</u></i></h3>
-        <div>
-            <h4 class="sub-head1">Programming:</h4>
-            <h5>Python, R, SQL</h5>
-            <h4 class="sub-head1">Frame Works:</h4>
-            <h5>Flask, Streamlit, Hadoop, Tensorflow, Keras, Sci-kit Learn</h5>
-            <h4 class="sub-head1">Tools/IDE:</h4>
-            <h5>VS Code, MySql, Tableau</h5>
-            <h4 class="sub-head1">Data Science Skills:</h4>
-            <h5>Machine Learning, CNN, RNN, LSTM, NLP, Time series Forecasting, Big data, MLOps</h5>
-        </div>
+            <h3 class="sub-head2"><i><u>My Skills:</u></i></h3>
+            <img class="word_cloud" src="images/wordcloud.svg">
         </div>
     </div><br><br>
 
@@ -376,10 +388,9 @@
         <button type="button" class="btn btn-primary"><i class="fa fa-download"></i>
             <a href="Document/Sumanth_Resume.pdf" class="resume"><b>Resume</b></a>
         </button>
-        <button type="button" class="btn btn-primary"><i class="fa fa-rocket"></i><b>Hire Me</b></button>
     </div>
     <div class="footer">
-        <p>Copyrights <i class="far fa-copyright"></i> 2022 | <b>Sumantha.NTS</b></p>
+        <p>Copyrights <i class="far fa-copyright"></i> 2023 | <b>Sumantha.NTS</b></p>
     </div>
 </div>
 </section>
